# termpod

./: .env.example  .gitignore  .prettierignore  CODE_OF_CONDUCT.md  LICENSE  README.md  SECURITY.md  SECURITY_PLAN.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
apps/desktop/: index.html  package.json  vite.config.ts
apps/desktop/src/: App.tsx  main.tsx  pty.ts  remoteSuggestions.ts  styles.css  termify.test.ts  termify.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/shell-integration/bash/: termpod.bash
apps/desktop/src-tauri/shell-integration/fish/vendor_conf.d/: termpod.fish
apps/desktop/src-tauri/shell-integration/zsh/: .zshenv  termpod.zsh
apps/desktop/src-tauri/src/: lib.rs  local_server.rs  main.rs  pty.rs
apps/desktop/termpod.icon/: icon.json
apps/docs/: .gitignore  package.json  tsconfig.json
apps/ios/: generate-config.sh  project.yml
apps/ios/TermPod.xcodeproj/: project.pbxproj
apps/ios/Termpod.xcodeproj/: project.pbxproj
apps/ios/Tests/: AuthServiceTests.swift  ClipTests.swift  ConnectionManagerTests.swift  CryptoServiceTests.swift  DeviceServiceTests.swift  DeviceTransportManagerTests.swift  KeychainServiceTests.swift  LocalTransportTests.swift  MuxFrameParsingTests.swift  NotificationServiceTests.swift  ProcessIconTests.swift  ReconnectionManagerTests.swift  RelayClientTests.swift  RelayConnectionStateTests.swift  RemoteTerminalViewTests.swift  SpecialKeysBarTests.swift  TerminalSettingsTests.swift  (+3 more)
apps/mobile/: index.html  package.json  vite.config.ts
apps/mobile-expo/: App.tsx  app.json  package.json
apps/web/: .gitignore  images.d.ts  package.json  tsconfig.json  wrangler.jsonc
docs/: ARCHITECTURE.md  CONTRIBUTING.md  Improvements.md  PROTOCOL.md  ROADMAP.md  SELF-HOSTING.md  iOS-Native.md
relay/: package.json  tsconfig.json  viewer.html  vitest.config.ts  vitest.integration.config.ts  wrangler.toml
relay/src/: auth.integration.test.ts  auth.test.ts  auth.ts  device-ws.integration.test.ts  devices.integration.test.ts  jwt.test.ts  jwt.ts  message-routing.test.ts  rate-limit.ts  scrollback-e2e.test.ts  session-ws.integration.test.ts  session.test.ts  session.ts  subscription.test.ts  subscription.ts  test-setup.ts  trial-alarm.test.ts  user-validation.test.ts  user.ts  worker.test.ts  worker.ts
scripts/: release.sh
(+193 files in other folders)
