[package]
name = "termpod-desktop"
version = "0.2.7"
edition = "2024"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
log = "0.4"
portable-pty = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
libc = "0.2"
tokio = { version = "1", features = ["rt-multi-thread", "net", "sync", "macros"] }
tokio-tungstenite = "0.26"
futures-util = { version = "0.3", default-features = false, features = ["sink"] }
local-ip-address = "0.6"
tauri-plugin-autostart = "2.5.1"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-process = "2"
tauri-plugin-updater = "2"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "=0.6.4"
objc2-foundation = { version = "=0.3.2", features = ["NSGeometry"] }
objc2-app-kit = { version = "=0.3.1", features = ["NSWindow", "NSButton", "NSView", "NSControl", "NSResponder"] }

[features]
custom-protocol = ["tauri/custom-protocol"]
